--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - images:/images
       - ./app/images:/images
       - ./app/static:/etc/nginx/html
+      - ./logs:/var/log/nginx
       - ./nginx.conf:/etc/nginx/nginx.conf
       - ./favicon.ico:/images/favicon.ico
     networks:
