--- a/nginx.conf
+++ b/nginx.conf
@@ -1,28 +1,32 @@
 http {
+    include mime.types;
+
     server {
         root /etc/nginx/html;
         listen 80;
+
         location / {
             index index.html;
         }
+
         location /upload {
             proxy_pass http://app:8000/upload;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-         location /favicon.ico {
+         location = /favicon.ico {
             types {
                 image/x-icon ico;
             }
             alias /images/favicon.ico;
         }
 
-        location /images/ {
-            index all_images.html;
+        location = /images/ {
+            index images.html;
         }
 
-        location ~ \.(gif|jpg|png|jpeg)$ {
+        location ~\/images\/.*.(gif|jpg|png|jpeg)$ {
             root /;
         }
     }
