--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,6 @@
 networks:
   default:
 
-volumes:
-  images:
-  logs:
-
 services:
   app:
     container_name: app
@@ -12,8 +8,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - images:/app/images
-      - logs:/app/logs
+      - ./app/logs:/app/logs
       - ./app/images:/app/images
     networks:
       - default
@@ -25,10 +20,9 @@ services:
     ports:
       - "80:80"
     volumes:
-      - images:/images
       - ./app/images:/images
       - ./app/static:/etc/nginx/html
-      - ./logs:/var/log/nginx
+      - ./app/logs:/var/log/nginx
       - ./nginx.conf:/etc/nginx/nginx.conf
       - ./favicon.ico:/images/favicon.ico
     networks:
