--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,12 @@ networks:
 services:
   app:
     container_name: app
-    build: ./app
+    build: .
     ports:
       - "8000:8000"
     volumes:
-      - ./app/logs:/app/logs
-      - ./app/images:/app/images
+      - ./logs:/app/logs
+      - ./images:/app/images
     networks:
       - default
 
@@ -20,9 +20,9 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./app/images:/images
-      - ./app/static:/etc/nginx/html
-      - ./app/logs:/var/log/nginx
+      - ./images:/images
+      - ./static:/etc/nginx/html
+      - ./logs:/var/log/nginx
       - ./nginx.conf:/etc/nginx/nginx.conf
       - ./favicon.ico:/images/favicon.ico
     networks:
