favicon.ico вынесен из папки images

--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,7 @@ http {
             types {
                 image/x-icon ico;
             }
-            alias /images/favicon.ico;
+            alias /etc/nginx/html/favicon.ico;
         }
 
         location = /images/ {
