Исправление ошибок, стилизация и добавление документации к коду

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,6 @@
 http {
     include mime.types;
+    client_max_body_size 20M;
 
     server {
         root /etc/nginx/html;
@@ -14,7 +15,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-         location = /favicon.ico {
+        location = /favicon.ico {
         }
 
         location = /images/ {
